# initial-template

./: .clinerules  .env.example  .gitignore  .replit  .winsurfrules  Dockerfile  README.md  REPLIT_SETUP.md  capacitor.config.ts  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts
android/: capacitor.settings.gradle
android/app/: build.gradle
apps/node-ai-service/: .env.example  Dockerfile  README.md  agent-server.js  docker-compose.yml  ecosystem.config.js  main.js  openai-api-server.js  package-lock.json  package.json  powersync-server.js
apps/webserver/: Cargo.toml  README.md
apps/webserver/src/: config.rs  deno.rs  error.rs  lib.rs  main.rs  server.rs
docs/: CONTEXT_AWARE_UI_ARCHITECTURE.md  COPILOT_TAURI_SELF_HOSTED.md  DESIGN_SYSTEM.md  FEATURE_SPECIFICATIONS.md  MOBILE_NAVIGATION_UI_ARCHITECTURE.md  PROMETHEUS_OVERVIEW.md  SQLCIPHER_DATABASE_SETUP.md  TAURI_DATABASE_PATH_RESOLUTION.md  UI_DESIGN.md  UI_DESIGN_PATTERNS.md  WINDOWS_BUILD_SETUP.md  WINDOWS_DEVELOPMENT.md
ios/App/: Podfile
scripts/: README.md  build-for-axum.sh  build-node-sidecar.sh  build-windows.sh  run-with-deno-debug.sh  run-with-node-debug.sh  setup-env.sh
src/: App.css  App.tsx  index.css  main.tsx  provider.tsx  routes.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config-windows.toml  config.toml
src-tauri/capabilities/: default.json
src-tauri/data/: powersync.db
src-tauri/src/: lib.rs  main.rs
src/components/: AppLayout.tsx  ApplicationContainer.tsx  ChatLayout.tsx  (+18 more)
supabase/: config.toml
(+50 files in other folders)
